WIP: nvoices builtin polyphonic engine

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,11 +1,9 @@
 cmake_minimum_required(VERSION 3.22.1)
 
-project("oboe_audio_player")
-
-add_library(oboe_audio_player SHARED native-lib.cpp SimpleOboePlayer.cpp)
+add_library(dsp_faust SHARED java_interface_wrap.cpp DspFaust.cpp)
 
 find_library(log-lib log)
 
 find_package(oboe REQUIRED CONFIG)
 
-target_link_libraries(oboe_audio_player android oboe::oboe ${log-lib})
+target_link_libraries(dsp_faust oboe::oboe ${log-lib})
