--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -6,4 +6,5 @@ find_library(log-lib log)
 
 find_package(oboe REQUIRED CONFIG)
 
+target_link_options(dsp_faust PUBLIC -Wl,-z,max-page-size=16384)
 target_link_libraries(dsp_faust oboe::oboe ${log-lib})
