Replace Faust DSP with 'classic' samples

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,26 +1,21 @@
 cmake_minimum_required(VERSION 3.22.1)
 
-project(ListenToWikipedia)
+project(oboe_audio_player)
 
-add_library(dsp_faust SHARED java_interface_wrap.cpp DspFaust.cpp)
-
-# Size optimization flags for release builds
-target_compile_options(dsp_faust PRIVATE
-    $<$<CONFIG:Release>:-Os>              # Optimize for size
-    $<$<CONFIG:Release>:-ffunction-sections>
-    $<$<CONFIG:Release>:-fdata-sections>
-    $<$<CONFIG:Release>:-ffast-math>      # Aggressive math optimizations for DSP
-    $<$<CONFIG:Release>:-fno-rtti>        # Disable RTTI if not needed
-)
-
-find_library(log-lib log)
-find_library(opensles-lib OpenSLES)
+set(CMAKE_FIND_PACKAGE_PREFER_CONFIG ON)
 
 find_package(oboe REQUIRED CONFIG)
+find_package(vorbis REQUIRED CONFIG)
+find_package(ogg REQUIRED CONFIG)
 
-target_link_options(dsp_faust PUBLIC 
-    -Wl,-z,max-page-size=16384
-    $<$<CONFIG:Release>:-Wl,--gc-sections>    # Remove unused sections
-    $<$<CONFIG:Release>:-Wl,--strip-all>      # Strip all symbols
+add_library(oboe_audio_player SHARED native-lib.cpp SimpleOboePlayer.cpp)
+
+target_link_libraries(oboe_audio_player
+        PRIVATE
+        android
+        log
+        oboe::oboe
+        vorbis::vorbis
+        vorbis::vorbisfile
+	ogg::ogg
 )
-target_link_libraries(dsp_faust oboe::oboe ${log-lib} ${opensles-lib})
